--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "dependencies": {
     "adm-zip": "^0.4.13",
     "cheerio": "^1.0.0-rc.3",
+    "dotenv": "^8.2.0",
     "extract-zip": "^1.6.7",
     "iconv-lite": "^0.5.0",
+    "mongodb": "^3.6.0",
+    "mongoose": "^5.9.27",
     "mysql2": "^1.7.0",
     "nightmare": "^3.0.2",
     "node-schedule": "^1.3.2",
