--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "adm-zip": "^0.4.13",
+    "adm-zip": "^0.4.16",
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
-    "extract-zip": "^1.6.7",
-    "iconv-lite": "^0.5.0",
-    "mongodb": "^3.6.0",
-    "mongoose": "^5.9.27",
+    "extract-zip": "^1.7.0",
+    "firebase": "^7.16.0",
+    "iconv-lite": "^0.5.2",
+    "mongodb": "^3.6.2",
+    "mongoose": "^5.10.8",
     "mysql2": "^1.7.0",
     "nightmare": "^3.0.2",
     "node-schedule": "^1.3.2",
